@@ -24,7 +24,7 @@
                 <value>Ram</value>
             </setting>
             <setting name="MemoryOffset" serializeAs="String">
-                <value>5729624</value>
+                <value>5743304</value>
             </setting>
             <setting name="FFXILogDirectory" serializeAs="String">
                 <value>C:\Program Files\PlayOnline\SquareEnix\FINAL FANTASY XI\TEMP</value>
